--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "email": "fred.juhlin@gmail.com"
   },
   "license": "MIT",
+  "deprecated": true,
   "bugs": {
     "url": "https://github.com/pandosme/node-red-axis-security/issues"
   },
